# trade-onboarding-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  requirements.txt  run_backend.sh  run_frontend.sh  step_1_completion_report.txt  test_phase6_regression.py  test_quiz_api_quick.py  test_session_quick.py  test_validation_quick.py
backend/: __init__.py  config.py  dependencies.py  main.py  requirements.txt
dataset/: ceo_style.json  claims.json  company_domain.json  country_rules.json  document_errors.json  emails.json  icc_trade_terms.json  internal_process.json  kpi.json  mistakes.json  mistakes_master.json  negotiation.json  quiz_samples.json  raw_trade_dictionary.json  raw_trade_terms.json  scenarios_master.json  trade_dictionary_full.json  trade_qa.json  trade_terminology.json  users_master.json
docs/: 0212 Mistake Agent Enterprise Evaluation.txt  AI Workflow Design 기획서_완성본.md  Agentic Workflow coLAB template_완성본.docx  EMAIL_AGENT_COMPLETE.md  EMAIL_AGENT_GUIDE.md  EMAIL_AGENT_WORKFLOW.md  GITHUB_SETUP.md  IMPLEMENTATION_REPORT.md  LOGGING_GUIDE.md  Mistake Predict factoring.txt  PHASE3_REFACTORING_COMPLETE.md  PHASE6_IMPLEMENTATION_REPORT.md  PHASE7_EXECUTIVE_SUMMARY.md  PHASE7_FINAL_VERIFICATION_REPORT.md  PHASE7_IMPLEMENTATION_REPORT.md  PHASE7_REGRESSION_TEST_RESULTS.md  Quiz, Eval agent 기획서.md  READMEfeature_yyk_ceo_agent.txt  READMEriskmanaging.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_REPORT.md  SESSION_STORE_GUIDE.md  TASK7_REDIS_INTEGRATION_REPORT.md  TASK9_QUIZ_API_REPORT.md  TOOLS_IMPLEMENTATION_REPORT.md  mistake  (+14 more)
(+189 files in other folders)
